--- a/index.html
+++ b/index.html
@@ -110,8 +110,9 @@
                             <span id="cleartracks-icon">▸</span>
                         </div>
                         <ul id="cleartracks" class="hidden pl-5 space-y-2">
-                            <li><a href="cleartracks.html#reskins" class="category-link">Reskins</a></li>
-                            <li><a href="#" class="category-link">Rolling Stock</a></li>
+                            <li><a href="cleartracks.html#enhancement-packs" class="category-link">Enhancement Packs</a></li>
+                            <li><a href="cleartracks.html#locomotives" class="category-link">Locomotives</a></li>
+                            <li><a href="cleartracks.html#rolling-stock" class="category-link">Rolling Stock</a></li>
                         </ul>
                     </li>
                     
