--- a/trurail-simulations.html
+++ b/trurail-simulations.html
@@ -265,10 +265,10 @@
                     
                     <div class="mod-card">
                         <a href="#" class="mod-card-link">
-                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/placeholder.jpg');"></div>
+                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/136991556_5155714967802756_6492855444432085851_n.jpg');"></div>
                         </a>
                         <div class="mod-card-content">
-                            <a href="#" class="mod-card-link">
+                            <a href="trurail-simulations/bo-gp40-2-chessie-system.html" class="mod-card-link">
                                 <h3 class="mod-card-title">B&O GP40-2 (Chessie System)</h3>
                             </a>
                             <p class="mod-card-description">A repaint of EMD's GP40-2 into Baltimore & Ohio (Chessie System).</p>
@@ -301,7 +301,7 @@
                     
                     <div class="mod-card">
                         <a href="trurail-simulations/cnw-emd-e8.html" class="mod-card-link">
-                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/121594236_4787827284591528_163720365520884739_n.jpg);"></div>
+                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/121594236_4787827284591528_163720365520884739_n.jpg');"></div>
                         </a>
                         <div class="mod-card-content">
                             <a href="trurail-simulations/cnw-emd-e8.html" class="mod-card-link">
