--- a/trurail-simulations/bo-gp40-2-chessie-system.html
+++ b/trurail-simulations/bo-gp40-2-chessie-system.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This download includes a new soundset for both the U34CH, Comet I Cab Car and Passenger Coaches">
     <meta name="keywords" content="train simulator, mods, archive, truRail, clearTracks, UTS creations, east coast simulations">
-    <title>U34CH Sound Revamp - Train Simulator Mod Archive</title>
+    <title>B&O GP40-2 (Chessie System) - Train Simulator Mod Archive</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload" href="https://files.trainsimarchive.org/media/tsma-logo.png" as="image">
@@ -35,7 +35,7 @@
                         <ul class="dropdown-menu" aria-labelledby="archiveDropdown">
                             <li><a class="dropdown-item" href="../trurail-simulations.html">TruRail Simulations</a></li>
                             <li><a class="dropdown-item" href="../cleartracks.html">ClearTracks</a></li>
-                            <li><a class="dropdown-item" href="../uts-creations.html">UTS Creations</a></li>
+                            <li><a class="dropdown-item" href="../trurail-simulations.html">UTS Creations</a></li>
                             <li><a class="dropdown-item" href="../east-coast-simulations.html">East Coast Simulations</a></li>
                             <li><a class="dropdown-item" href="../virtual-rail-creations.html">Virtual Rail Creations</a></li>
                         </ul>
@@ -60,7 +60,7 @@
             <div class="mobile-nav-divider">Archive</div>
             <a href="../trurail-simulations.html" class="mobile-nav-link mobile-nav-sublink">TruRail Simulations</a>
             <a href="../cleartracks.html" class="mobile-nav-link mobile-nav-sublink">ClearTracks</a>
-            <a href="../uts-creations.html" class="mobile-nav-link mobile-nav-sublink">UTS Creations</a>
+            <a href="../trurail-simulations.html" class="mobile-nav-link mobile-nav-sublink">UTS Creations</a>
             <a href="../east-coast-simulations.html" class="mobile-nav-link mobile-nav-sublink">East Coast Simulations</a>
             <a href="../virtual-rail-creations.html" class="mobile-nav-link mobile-nav-sublink">Virtual Rail Creations</a>
         </div>
@@ -69,18 +69,18 @@
         <div class="mod-exconrail-section">
             <div class="text-gray-400 mb-2">
                 <a href="../index.html" class="hover:underline">Home</a> >
-                <a href="../uts-creations.html" class="hover:underline">UTS Creations</a> >
-                <span>U34CH Sound Revamp</span>
+                <a href="../trurail-simulations.html" class="hover:underline">TruRail Simulations</a> >
+                <span>B&O GP40-2 (Chessie System)</span>
             </div>
             <div class="flex justify-between items-start mb-2">
                 <div>
-                    <h1 class="text-2xl font-bold">U34CH Sound Revamp</h1>
-                    <p class="text-gray-400">By <a href="../uts-creations.html" class="hover:underline">UTS Creations</a></p>
+                    <h1 class="text-2xl font-bold">B&O GP40-2 (Chessie System)</h1>
+                    <p class="text-gray-400">By <a href="../trurail-simulations.html" class="hover:underline">TruRail Simulations</a></p>
                 </div>
                 <a href="#" 
                    class="mod-exconrail-download-button download-trigger" 
-                   data-url="https://files.trainsimarchive.org/UTS%20-%20U34CH%20SoundRevamp%201.zip"
-                   data-name="UTS - U34CH SoundRevamp 1.zip">
+                   data-url="https://files.trainsimarchive.org/TRS%20-%20B%26O_GP40-2.rar"
+                   data-name="TRS - B&O_GP40-2.rar">
                     Download
                 </a>
             </div>
@@ -88,7 +88,7 @@
                 <div>
                     <div class="mod-gallery">
                         <div class="mod-gallery-main">
-                            <img id="mainDisplayImage" src="https://files.trainsimarchive.org/media/u34ch-sound-revamp.png" alt="U34CH Sound Revamp">
+                            <img id="mainDisplayImage" src="https://files.trainsimarchive.org/media/136991556_5155714967802756_6492855444432085851_n.jpg" alt="B&O GP40-2 (Chessie System)">
                             <div class="gallery-controls">
                                 <button class="gallery-nav-btn gallery-nav-prev" onclick="event.stopPropagation(); manualNavigateGallery(-1)" aria-label="Previous">
                                     <i class="fas fa-chevron-left"></i>
@@ -102,7 +102,7 @@
                         </div>
                         <div class="mod-gallery-thumbs">
                             <div class="gallery-thumb" onclick="openLightbox(0)" data-index="0">
-                                <img src="https://files.trainsimarchive.org/media/u34ch-sound-revamp.png" alt="Image 1">
+                                <img src="https://files.trainsimarchive.org/media/136991556_5155714967802756_6492855444432085851_n.jpg" alt="Image 1">
                             </div>
                         </div>
                     </div>
@@ -115,34 +115,30 @@
                     </p>  
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Features</h3>
                     <ul class="requirements-list" style="margin-bottom: 1.5rem;">
-                        <li>New GE 7FDL-16 prime mover audio</li>
-                        <li>New cab sounds for both locomotive and cab car, including a conductor whistle</li>
-                        <li>New, separate bogie sounds specific to the U34CH and Comet I coaches</li>
-                        <li>New air brake sounds, the Comet I has accurate 'air tank' charge and discharge effects</li>
-                        <li>New coupler audio</li>
-                        <li>External and internal ambient audio for the coaches - AC, people talking etc.</li>
-                        <li>Fixed horn and bell for both the cab car and locomotive</li>
+                        <li>New decals (where applicable)</li>
+                        <li>New running numbers</li>
+                        <li>Non-functioning ditchlights</li>
+                        <li>Correct number placement</li>
+                        <li>4K textures</li>
                     </ul>
-
+                    
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Requirements</h3>
                     <ul class="requirements-list" style="margin-bottom: 1.5rem;">
-                        <li><a href="https://store.steampowered.com/app/1211475/Train_Simulator_NJ_TRANSIT_U34CH_Loco_AddOn/" target="_blank">NJT U34CH DLC</a></li>
-                        <li><a href="https://store.steampowered.com/app/896768/TS_Marketplace_U34CH_Early_Years_Livery_Pack/" target="_blank">U34CH Early Years Livery Pack</a></li>
-                        <li><a href="https://store.steampowered.com/app/376958/Train_Simulator_Chessie_System_U30C_Loco_AddOn/" target="_blank">Chessie System U30C Loco Add-On</a></li>
+                        <li><a href="https://store.steampowered.com/app/774758/Train_Simulator_GP402_Loco_Pack_AddOn/" target="_blank">GP40-2 Loco Pack Add-On</a></li>
                     </ul>
 
-                    <div class="file-details-box" data-name="UTS - U34CH SoundRevamp 1.zip">
+                    <div class="file-details-box" data-name="TRS - B&O_GP40-2.rar">
                         <a href="#" 
                            class="download-trigger" 
-                           data-url="https://files.trainsimarchive.org/UTS%20-%20U34CH%20SoundRevamp%201.zip"
-                           data-name="UTS - U34CH SoundRevamp 1.zip"
+                           data-url="https://files.trainsimarchive.org/TRS%20-%20B%26O_GP40-2.rar"
+                           data-name="TRS - B&O_GP40-2.rar"
                            style="display: block; padding: 1rem; background: #1a1a1a; border: 2px solid #333; border-radius: 8px; text-decoration: none; transition: all 0.2s; cursor: pointer;">
                             <div style="display: flex; align-items: center; gap: 0.75rem;">
                                 <div style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center; background: #252525; border-radius: 6px;">
                                     <i class="fas fa-file-archive" style="font-size: 1.25rem; color: #888;"></i>
                                 </div>
                                 <div style="flex: 1;">
-                                    <div style="font-weight: 500; color: #fff; font-size: 0.95rem;">UTS - U34CH SoundRevamp 1.zip</div>
+                                    <div style="font-weight: 500; color: #fff; font-size: 0.95rem;">TRS - B&O_GP40-2.rar</div>
                                     <div style="display: flex; gap: 1rem; font-size: 0.8rem; color: #888; margin-top: 0.2rem; flex-wrap: wrap;">
                                         <span><i class="fas fa-hdd" style="margin-right: 0.25rem;"></i><span data-file-size>Loading...</span></span>
                                         <span><i class="fas fa-clock" style="margin-right: 0.25rem;"></i><span data-file-uploaded>Loading...</span></span>
