--- a/trurail-simulations/southern-pacific-gp9.html
+++ b/trurail-simulations/southern-pacific-gp9.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Multiple repaints of EMD's GP40-2 and the PS 4750 Hopper into Adriana County liveries. ">
+    <meta name="description" content="Repaint of EMD's GP9 into Southern Pacific's 'Bloody Nose' paint scheme. ">
     <meta name="keywords" content="train simulator, mods, archive, truRail, clearTracks, UTS creations, east coast simulations">
     <title>Southern Pacific GP9 - Train Simulator Mod Archive</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
