--- a/trurail-simulations/bo-gp40-2-chessie-system.html
+++ b/trurail-simulations/bo-gp40-2-chessie-system.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="This download includes a new soundset for both the U34CH, Comet I Cab Car and Passenger Coaches">
+    <meta name="description" content="Repaint of EMD's GP40-2 into Baltimore & Ohio (Chessie System).">
     <meta name="keywords" content="train simulator, mods, archive, truRail, clearTracks, UTS creations, east coast simulations">
     <title>B&O GP40-2 (Chessie System) - Train Simulator Mod Archive</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -111,7 +111,7 @@
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Description</h3>
                     <p style="margin-bottom: 1.5rem;">
-                        This download includes a new soundset for both the U34CH, Comet I Cab Car and Passenger Coaches.
+                        This download contains a repaint of EMD's GP40-2 into Baltimore & Ohio (Chessie System).
                     </p>  
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Features</h3>
                     <ul class="requirements-list" style="margin-bottom: 1.5rem;">
