--- a/trurail-simulations/bo-gp40-2-chessie-system.html
+++ b/trurail-simulations/bo-gp40-2-chessie-system.html
@@ -35,7 +35,7 @@
                         <ul class="dropdown-menu" aria-labelledby="archiveDropdown">
                             <li><a class="dropdown-item" href="../trurail-simulations.html">TruRail Simulations</a></li>
                             <li><a class="dropdown-item" href="../cleartracks.html">ClearTracks</a></li>
-                            <li><a class="dropdown-item" href="../trurail-simulations.html">UTS Creations</a></li>
+                            <li><a class="dropdown-item" href="../uts-creations.html">UTS Creations</a></li>
                             <li><a class="dropdown-item" href="../east-coast-simulations.html">East Coast Simulations</a></li>
                             <li><a class="dropdown-item" href="../virtual-rail-creations.html">Virtual Rail Creations</a></li>
                         </ul>
@@ -60,7 +60,7 @@
             <div class="mobile-nav-divider">Archive</div>
             <a href="../trurail-simulations.html" class="mobile-nav-link mobile-nav-sublink">TruRail Simulations</a>
             <a href="../cleartracks.html" class="mobile-nav-link mobile-nav-sublink">ClearTracks</a>
-            <a href="../trurail-simulations.html" class="mobile-nav-link mobile-nav-sublink">UTS Creations</a>
+            <a href="../uts-creations.html" class="mobile-nav-link mobile-nav-sublink">UTS Creations</a>
             <a href="../east-coast-simulations.html" class="mobile-nav-link mobile-nav-sublink">East Coast Simulations</a>
             <a href="../virtual-rail-creations.html" class="mobile-nav-link mobile-nav-sublink">Virtual Rail Creations</a>
         </div>
