--- a/trurail-simulations.html
+++ b/trurail-simulations.html
@@ -126,11 +126,11 @@
                 <h2 class="category-title">Enhancement Packs</h2>
                 <div class="mods-grid">
                     <div class="mod-card">
-                        <a href="#" class="mod-card-link">
+                        <a href="trurail-simulations/amtk-p42dc-ep" class="mod-card-link">
                             <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/placeholder.jpg');"></div>
                         </a>
                         <div class="mod-card-content">
-                            <a href="#" class="mod-card-link">
+                            <a href="trurail-simulations/amtk-p42dc-ep" class="mod-card-link">
                                 <h3 class="mod-card-title">Amtrak GE P42DC EP</h3>
                             </a>
                             <p class="mod-card-description">An enhancement of General Electric's P42DC locomotive ordered by Amtrak and VIA Rail. Depicted is the "Phase V" Amtrak scheme.</p>
