--- a/trurail-simulations.html
+++ b/trurail-simulations.html
@@ -127,7 +127,7 @@
                 <div class="mods-grid">
                     <div class="mod-card">
                         <a href="trurail-simulations/amtk-p42dc-ep" class="mod-card-link">
-                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/placeholder.jpg');"></div>
+                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/14a601_f6c0c893264d49cc83e8ecd82b7acb07~mv2.png');"></div>
                         </a>
                         <div class="mod-card-content">
                             <a href="trurail-simulations/amtk-p42dc-ep" class="mod-card-link">
