--- a/trurail-simulations/amtk-p42dc-ep.html
+++ b/trurail-simulations/amtk-p42dc-ep.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Enhancement of General Electric's P42DC locomotive ordered by AMTK and VIA Rail. Depicted is the "Phase V" AMTK scheme. ">
+    <meta name="description" content="Enhancement of General Electric's P42DC locomotive ordered by Amtrak and VIA Rail. Depicted is the "Phase V" Amtrak scheme. ">
     <meta name="keywords" content="train simulator, mods, archive, truRail, clearTracks, UTS creations, east coast simulations">
-    <title>AMTK GE P42DC Enhancement Pack - Train Simulator Mod Archive</title>
+    <title>Amtrak GE P42DC Enhancement Pack - Train Simulator Mod Archive</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload" href="https://files.trainsimarchive.org/media/tsma-logo.png" as="image">
@@ -71,11 +71,11 @@
             <div class="text-gray-400 mb-2">
                 <a href="../index.html" class="hover:underline">Home</a> >
                 <a href="../trurail-simulations.html" class="hover:underline">TruRail Simulations</a> >
-                <span>AMTK GE P42DC Enhancement Pack</span>
+                <span>Amtrak GE P42DC Enhancement Pack</span>
             </div>
             <div class="flex justify-between items-start mb-2">
                 <div>
-                    <h1 class="text-2xl font-bold">AMTK GE P42DC Enhancement Pack</h1>
+                    <h1 class="text-2xl font-bold">Amtrak GE P42DC Enhancement Pack</h1>
                     <p class="text-gray-400">By <a href="../trurail-simulations.html" class="hover:underline">TruRail Simulations</a></p>
                 </div>
                 <div class="download-section">
@@ -91,7 +91,7 @@
                 <div>
                     <div class="mod-gallery">
                         <div class="mod-gallery-main">
-                            <img id="mainDisplayImage" src="https://files.trainsimarchive.org/media/14a601_f6c0c893264d49cc83e8ecd82b7acb07~mv2.png" alt="AMTK GE P42DC Enhancement Pack">
+                            <img id="mainDisplayImage" src="https://files.trainsimarchive.org/media/14a601_f6c0c893264d49cc83e8ecd82b7acb07~mv2.png" alt="Amtrak GE P42DC Enhancement Pack">
                             <div class="gallery-controls">
                                 <button class="gallery-nav-btn gallery-nav-prev" onclick="event.stopPropagation(); manualNavigateGallery(-1)" aria-label="Previous">
                                     <i class="fas fa-chevron-left"></i>
@@ -135,7 +135,7 @@
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Description</h3>
                     <p style="margin-bottom: 1.5rem;">
-                        This download contains an enhancement of General Electric's P42DC locomotive ordered by AMTK and VIA Rail. Depicted is the "Phase V" AMTK scheme.
+                        This download contains an enhancement of General Electric's P42DC locomotive ordered by Amtrak and VIA Rail. Depicted is the "Phase V" Amtrak scheme.
                     </p>
                     
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Features</h3>
