--- a/trurail-simulations.html
+++ b/trurail-simulations.html
@@ -492,12 +492,12 @@
                     </div>
                     
                     <div class="mod-card">
-                        <a href="#" class="mod-card-link">
-                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/placeholder.jpg');"></div>
+                        <a href="trurail-simulations/canpac-ac4400cw-striped-plow.html" class="mod-card-link">
+                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/14a601_58e062213a224ffa87e3b5c9f4c752a9~mv2.jpg');"></div>
                         </a>
                         <div class="mod-card-content">
-                            <a href="#" class="mod-card-link">
-                                <h3 class="mod-card-title">Striped Plow AC4400CW</h3>
+                            <a href="trurail-simulations/canpac-ac4400cw-striped-plow.html" class="mod-card-link">
+                                <h3 class="mod-card-title">CanPac AC4400CW Striped Plow</h3>
                             </a>
                             <p class="mod-card-description">A repaint of GE's AC4400CW into the CP 'Striped Plow' scheme.</p>
                         </div>
