--- a/trurail-simulations.html
+++ b/trurail-simulations.html
@@ -139,10 +139,10 @@
                     
                     <div class="mod-card">
                         <a href="#" class="mod-card-link">
-                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/placeholder.jpg');"></div>
+                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/14a601_ce52816567144e648213d91db6e7c0b8~mv2.jpg');"></div>
                         </a>
                         <div class="mod-card-content">
-                            <a href="#" class="mod-card-link">
+                            <a href="trurail-simulations/berkshire-texture-ep.html" class="mod-card-link">
                                 <h3 class="mod-card-title">Berkshire Texture EP</h3>
                             </a>
                             <p class="mod-card-description">A texture enhancement for the Bershire Steam Engine</p>
