--- a/uts-creations/alco-rs-11-ep.html
+++ b/uts-creations/alco-rs-11-ep.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="This is a comprehensive set ofenhancements for the virtualRailroads Lehigh Valley RS-11 along with the Pennsylvania Railroad RS-11 available on the steam store.">
+    <meta name="description" content="This is a comprehensive set of enhancements for the virtualRailroads Lehigh Valley RS-11 along with the Pennsylvania Railroad RS-11 available on the steam store.">
     <meta name="keywords" content="train simulator, mods, archive, truRail, clearTracks, UTS creations, east coast simulations">
     <title>ALCO RS-11 EP - Train Simulator Mod Archive</title>
+    
+    <!-- Favicon -->
+    <link rel="icon" type="image/jpeg" href="https://files.trainsimarchive.org/media/favicon.jpg">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
