--- a/trurail-simulations/bnsf-sd70ace.html
+++ b/trurail-simulations/bnsf-sd70ace.html
@@ -58,6 +58,9 @@
                             <li><a class="dropdown-item" href="../virtual-rail-creations.html">Virtual Rail Creations</a></li>
                         </ul>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../support.html">Support Us</a>
+                    </li>
                 </ul>
                 
                 <div class="d-flex align-items-center ms-auto">
@@ -189,8 +192,6 @@
                 <a href="../terms.html">Terms of Use</a>
                 <span class="separator">•</span>
                 <a href="../privacy.html">Privacy Policy</a>
-                <span class="separator">•</span>
-                <a href="../support.html">Support Us</a>
                 <span class="separator">•</span>
                 <a href="https://www.facebook.com/groups/trainsimulatormodarchive" target="_blank" title="Facebook Group">
                     <i class="fab fa-facebook"></i>
