--- a/files.html
+++ b/files.html
@@ -80,11 +80,12 @@
             <a href="index.html" class="mobile-nav-link">Home</a>
             <a href="contributors.html" class="mobile-nav-link">Contributors</a>
             <div class="mobile-nav-divider">Archive</div>
-            <a href="trurail-simulations.html" class="mobile-nav-link mobile-nav-sublink">TruRail Simulations</a>
-            <a href="cleartracks.html" class="mobile-nav-link mobile-nav-sublink">ClearTracks</a>
-            <a href="uts-creations.html" class="mobile-nav-link mobile-nav-sublink">UTS Creations</a>
-            <a href="east-coast-simulations.html" class="mobile-nav-link mobile-nav-sublink">East Coast Simulations</a>
-            <a href="virtual-rail-creations.html" class="mobile-nav-link mobile-nav-sublink">Virtual Rail Creations</a>
+            <a href="trurail-simulations.html" class="mobile-nav-sublink">TruRail Simulations</a>
+            <a href="cleartracks.html" class="mobile-nav-sublink">ClearTracks</a>
+            <a href="uts-creations.html" class="mobile-nav-sublink">UTS Creations</a>
+            <a href="east-coast-simulations.html" class="mobile-nav-sublink">East Coast Simulations</a>
+            <a href="virtual-rail-creations.html" class="mobile-nav-sublink">Virtual Rail Creations</a>
+            <a href="support.html" class="mobile-nav-link">Support Us</a>
         </div>
     </nav>
 
