--- a/trurail-simulations/berkshire-texture-ep.html
+++ b/trurail-simulations/berkshire-texture-ep.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Repaint of GE's AC4400CW into the CP 'Striped Plow' scheme.">
+    <meta name="description" content="Texture and overall enhancement for the NPK S-2 Class 'Berkshire' DLC.">
     <meta name="keywords" content="train simulator, mods, archive, truRail, clearTracks, UTS creations, east coast simulations">
     <title>Berkshire Texture Enhancement - Train Simulator Mod Archive</title>
     
@@ -14,7 +14,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.trainsimarchive.org/trurail-simulations/berkshire-texture-ep.html">
     <meta property="og:title" content="Berkshire Texture Enhancement">
-    <meta property="og:description" content="Repaint of GE's AC4400CW into the CP 'Striped Plow' scheme.">
+    <meta property="og:description" content="Texture and overall enhancement for the NPK S-2 Class 'Berkshire' DLC.">
     <meta property="og:image" content="https://files.trainsimarchive.org/media/14a601_ce52816567144e648213d91db6e7c0b8~mv2.jpg">
     <meta property="og:site_name" content="Train Simulator Mod Archive">
     
@@ -22,7 +22,7 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.trainsimarchive.org/trurail-simulations/berkshire-texture-ep.html">
     <meta property="twitter:title" content="Berkshire Texture Enhancement">
-    <meta property="twitter:description" content="Repaint of GE's AC4400CW into the CP 'Striped Plow' scheme.">
+    <meta property="twitter:description" content="Texture and overall enhancement for the NPK S-2 Class 'Berkshire' DLC.">
     <meta property="twitter:image" content="https://files.trainsimarchive.org/media/14a601_ce52816567144e648213d91db6e7c0b8~mv2.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -151,7 +151,7 @@
                             </div>
                         </div>
                     </div>
-                    <p class="page-updated">Page Updated: 12/02/2025</p>
+                    <p class="page-updated">Page Updated: 12/09/2025</p>
                 </div>
                 <div>
                     <h3 style="font-size: 1.1rem; margin-bottom: 0.5rem;">Description</h3>
