--- a/trurail-simulations.html
+++ b/trurail-simulations.html
@@ -214,10 +214,10 @@
                 <div class="mods-grid">
                     <div class="mod-card">
                         <a href="#" class="mod-card-link">
-                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/placeholder.jpg');"></div>
+                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/14a601_750abcdb21d448e59719b01a130beaf7~mv2.png');"></div>
                         </a>
                         <div class="mod-card-content">
-                            <a href="#" class="mod-card-link">
+                            <a href="trurail-simulations/up-fef-3-whistle.html" class="mod-card-link">
                                 <h3 class="mod-card-title">Union Pacific FEF-3 Whistle</h3>
                             </a>
                             <p class="mod-card-description">A simple whistle that represents the one heard prior to the removal of UP 844's mars light.</p>
