--- a/trurail-simulations.html
+++ b/trurail-simulations.html
@@ -711,11 +711,11 @@
                     </div>
                     
                     <div class="mod-card">
-                        <a href="#" class="mod-card-link">
-                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/placeholder.jpg');"></div>
+                        <a href="cleartracks/wp-caboose-pack.html" class="mod-card-link">
+                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/14a601_2888cd2fc1004a9e9a236fc0cb2085a7~mv2.png');"></div>
                         </a>
                         <div class="mod-card-content">
-                            <a href="#" class="mod-card-link">
+                            <a href="cleartracks/wp-caboose-pack.html" class="mod-card-link">
                                 <h3 class="mod-card-title">WP Caboose Pack</h3>
                             </a>
                             <p class="mod-card-description">A pack of Bay Window Cabooses in Western Pacific liveries.</p>
