--- a/trurail-simulations.html
+++ b/trurail-simulations.html
@@ -615,11 +615,11 @@
                     </div>
                     
                     <div class="mod-card">
-                        <a href="#" class="mod-card-link">
-                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/placeholder.jpg');"></div>
+                        <a href="trurail-simulations/bn-fuel-tender.html" class="mod-card-link">
+                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/14a601_f485a80a57674f63b8ff586b7dc0b886~mv2.png');"></div>
                         </a>
                         <div class="mod-card-content">
-                            <a href="#" class="mod-card-link">
+                            <a href="trurail-simulations/bn-fuel-tender.html" class="mod-card-link">
                                 <h3 class="mod-card-title">BN Fuel Tender</h3>
                             </a>
                             <p class="mod-card-description">A reskin of the JR 23K tank car into the Burlington Northern's fuel tenders.</p>
