--- a/uts-creations.html
+++ b/uts-creations.html
@@ -657,14 +657,14 @@
                     </div>
                     
                     <div class="mod-card">
-                        <a href="#" class="mod-card-link">
-                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/placeholder.jpg');"></div>
+                        <a href="uts-creations/retro-ge-genesis-pack.html" class="mod-card-link">
+                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/AAZXCK~1.png');"></div>
                         </a>
                         <div class="mod-card-content">
-                            <a href="#" class="mod-card-link">
+                            <a href="uts-creations/retro-ge-genesis-pack.html" class="mod-card-link">
                                 <h3 class="mod-card-title">Retro GE Genesis Pack</h3>
                             </a>
-                            <p class="mod-card-description">This reskin pack comprehensively represents Amtrak's P40DC and P42DC locomotives as they were in their original Phase III and Phase IV liveries.</p>
+                            <p class="mod-card-description">Representation of Amtrak's P40DC and P42DC locomotives in Phase III and IV liveries. </p>
                         </div>
                     </div>
                     
