--- a/uts-creations/alco-rs-11-ep.html
+++ b/uts-creations/alco-rs-11-ep.html
@@ -109,7 +109,7 @@
                 <div>
                     <div class="mod-gallery">
                         <div class="mod-gallery-main">
-                            <img id="mainDisplayImage" src="https://files.trainsimarchive.org/media/amtrakf40ep.png" alt="ALCO RS-11 EP">
+                            <img id="mainDisplayImage" src="https://files.trainsimarchive.org/media/ef8207_18cb2edcbce94eff9eedd7d859bb2c9a~mv2.png" alt="ALCO RS-11 EP">
                             <div class="gallery-controls">
                                 <button class="gallery-nav-btn gallery-nav-prev" onclick="event.stopPropagation(); manualNavigateGallery(-1)" aria-label="Previous">
                                     <i class="fas fa-chevron-left"></i>
@@ -123,7 +123,7 @@
                         </div>
                         <div class="mod-gallery-thumbs">
                             <div class="gallery-thumb" onclick="openLightbox(0)" data-index="0">
-                                <img src="https://files.trainsimarchive.org/media/amtrakf40ep.png" alt="Image 1">
+                                <img src="https://files.trainsimarchive.org/media/ef8207_18cb2edcbce94eff9eedd7d859bb2c9a~mv2.png" alt="Image 1">
                             </div>
                         </div>
                     </div>
