--- a/uts-creations/amtrakf40-ep.html
+++ b/uts-creations/amtrakf40-ep.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="This download contains new scripts, flares and much more for the F40PH DLC.">
+    <meta name="description" content="New scripts, flares and much more for the F40PH DLC.">
     <meta name="keywords" content="train simulator, mods, archive, truRail, clearTracks, UTS creations, east coast simulations">
     <title>Amtrak F40PH EP - Train Simulator Mod Archive</title>
     
@@ -14,7 +14,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.trainsimarchive.org/uts-creations/amtrakf40-ep.html">
     <meta property="og:title" content="Amtrak F40PH EP">
-    <meta property="og:description" content="This download contains new scripts, flares and much more for the F40PH DLC.">
+    <meta property="og:description" content="New scripts, flares and much more for the F40PH DLC.">
     <meta property="og:image" content="https://files.trainsimarchive.org/media/amtrakf40ep.png">
     <meta property="og:site_name" content="Train Simulator Mod Archive">
     
@@ -22,7 +22,7 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.trainsimarchive.org/uts-creations/amtrakf40-ep.html">
     <meta property="twitter:title" content="Amtrak F40PH EP">
-    <meta property="twitter:description" content="This download contains new scripts, flares and much more for the F40PH DLC.">
+    <meta property="twitter:description" content="New scripts, flares and much more for the F40PH DLC.">
     <meta property="twitter:image" content="https://files.trainsimarchive.org/media/amtrakf40ep.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
