--- a/trurail-simulations/metra-f59phi-pack.html
+++ b/trurail-simulations/metra-f59phi-pack.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A repaint of EMD's F59PHI into Metra's Ex-Amtrak Surfliner paint scheme.">
+    <meta name="description" content="Repaint of EMD's F59PHI into Metra's Ex-Amtrak Surfliner paint scheme.">
     <meta name="keywords" content="train simulator, mods, archive, truRail, clearTracks, UTS creations, east coast simulations">
     <title>Metra F59PHI Pack - Train Simulator Mod Archive</title>
     
@@ -14,7 +14,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.trainsimarchive.org/trurail-simulations/metra-f59phi-pack.html">
     <meta property="og:title" content="Metra F59PHI Pack">
-    <meta property="og:description" content="A repaint of EMD's F59PHI into Metra's Ex-Amtrak Surfliner paint scheme.">
+    <meta property="og:description" content="Repaint of EMD's F59PHI into Metra's Ex-Amtrak Surfliner paint scheme.">
     <meta property="og:image" content="https://files.trainsimarchive.org/media/unnamed17.jpg">
     <meta property="og:site_name" content="Train Simulator Mod Archive">
     
@@ -22,7 +22,7 @@
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.trainsimarchive.org/trurail-simulations/metra-f59phi-pack.html">
     <meta property="twitter:title" content="Metra F59PHI Pack">
-    <meta property="twitter:description" content="A repaint of EMD's F59PHI into Metra's Ex-Amtrak Surfliner paint scheme.">
+    <meta property="twitter:description" content="Repaint of EMD's F59PHI into Metra's Ex-Amtrak Surfliner paint scheme.">
     <meta property="twitter:image" content="https://files.trainsimarchive.org/media/unnamed17.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
