--- a/trurail-simulations.html
+++ b/trurail-simulations.html
@@ -525,11 +525,11 @@
                     </div>
                     
                     <div class="mod-card">
-                        <a href="#" class="mod-card-link">
-                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/placeholder.jpg');"></div>
+                        <a href="trurail-simulations/up-non-dyno-gp38-2.html" class="mod-card-link">
+                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/14a601_225f9c747afb4234bea56d0febc2f355~mv2.jpg');"></div>
                         </a>
                         <div class="mod-card-content">
-                            <a href="#" class="mod-card-link">
+                            <a href="trurail-simulations/up-non-dyno-gp38-2.html" class="mod-card-link">
                                 <h3 class="mod-card-title">Union Pacific Non-Dyno GP38-2</h3>
                             </a>
                             <p class="mod-card-description">A variant of Union Pacific's GP38-2 with no dynamic brake fan</p>
