--- a/trurail-simulations.html
+++ b/trurail-simulations.html
@@ -537,11 +537,11 @@
                     </div>
                     
                     <div class="mod-card">
-                        <a href="#" class="mod-card-link">
-                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/placeholder.jpg');"></div>
+                        <a href="trurail-simulations/united-way-sd40-2.html" class="mod-card-link">
+                            <div class="mod-card-image" style="background-image: url('https://files.trainsimarchive.org/media/14a601_4684395c93c24feaba2ec2852544c1cf~mv2.png');"></div>
                         </a>
                         <div class="mod-card-content">
-                            <a href="#" class="mod-card-link">
+                            <a href="trurail-simulations/united-way-sd40-2.html" class="mod-card-link">
                                 <h3 class="mod-card-title">United Way SD40-2</h3>
                             </a>
                             <p class="mod-card-description">Union Pacific #3300 Painted in a patriotic livery for the 1994 United Way Campaign.</p>
